Updating tabs for tablet and desktop interface

--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -36,7 +36,7 @@
 				&:last-child {
 					border-right:none;
 				}
-				&:hover {
+				&:hover, &:active {
 					background:#fff;
 					color:$titleColor;
 				}
