--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -35,7 +35,7 @@
 				&:first-child {
 					border-left:1px solid $readingColor;
 				}
-				&:hover {
+				&:hover, &:active {
 					background:#fff;
 					color:$titleColor;
 				}
@@ -97,7 +97,7 @@
 
 	#footer-wrapper {
 		max-width:120em;
-		margin:0 auto;
+		margin:0 auto;2
 	}
 }
 
