--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -2,7 +2,7 @@
 	// text changes
 	h1 { @include fontSize(2.3) }
 	h2 { @include fontSize(1.9) }
-	h3 { @include fontSize(1.8) }
+	h3 { @include fontSize(1.7) }
 	h4 { @include fontSize(1.5) }
 	p { 
 		@include fontSize(1.4);
@@ -11,14 +11,18 @@
 		}
 	}
 	header {
-		
+
+		h1 {
+			margin-left:5%;
+		}
+
 		.menuToggle {
-			@include fontSize(2);
+			@include fontSize(1.6);
 			color:#fff;
 			display:block;
 			text-transform: uppercase;
 			background:#333;
-			padding:0.65em 1em 0.65em 1em;
+			padding:1em 1.2em 0.85em 1.2em;
 		}
 
 		nav {
@@ -27,29 +31,48 @@
 
 			.navItem {
 				@include fontSize(1.4);
-				display:block;
-				padding:1.2em 5%;
+				float:left;
+				width:33.3333%;
+				padding:1.2em 0;
+				text-align:center;
 				background:#333;
 				color:#fff;
 				text-decoration: none;
-				border-bottom:1px solid $titleColor;
 				font-style:italic;
 			}
 		}
 	}
 
 	#content-wrapper {
-		width:100%;
+		width:96%;
+		margin:1em 2%;
 		padding-top:2%;
+		@include roundedCorners(4px);
 
+		.main {
+			width:100%;
+			padding:0;
+			border-right:none;
+
+			form {
+				input[type="text"] {
+					width:96%;
+					padding:2%;
+				}
+				input[type="submit"] {
+					width:100%;
+				}
+			}
+		}
 		article {
-			border-bottom:1px solid $readingColor;
+			border-bottom:1px solid #ccc;
 			width:90%;
 			padding:0 5%;
 			margin-bottom:1%;
 			-webkit-tap-highlight-color: lightBlue;
 		}
 		.summary {
+			display:block;
 			padding-right:20%;
 		}
 
@@ -57,24 +80,11 @@
 			display:none;
 		}
 		aside {
+			clear:both;
+			float:left;
 			width:90%;
 			padding:2% 5% 0;
 
-			.heading {
-				margin-left:-6%;
-				margin-right:-6%;
-				padding-left:5%;
-				background:$titleColor;
-				color:#fff;
-			}
-			.profilePicture {
-				float:right;
-				width:27%;
-				height:auto;
-				margin-left:1em;
-				margin-bottom:1em;
-				@include roundedCorners(50%);
-			}
 			.asideList {
 				list-style-type:none;
 				margin-left:-6%;
@@ -84,9 +94,11 @@
 					@include fontSize(1.4);
 					display:block;
 					padding:1.2em 5%;
-					// color:#fff;
+					background:#333;
+					color:#fff;
 					text-decoration: none;
-					border-bottom:1px solid $readingColor;
+					border-bottom:1px solid $titleColor;
+					font-style:italic;
 
 					&:last-child {
 						border-bottom:none;
