--- a/css/_baseLayout.scss
+++ b/css/_baseLayout.scss
@@ -28,10 +28,11 @@ header {
 	background:#fff;
 	width:98%;
 	margin:0 auto 1em;
+	@include roundedCorners(3px);
 }
 .main {
-		width:61%;
-		padding:2% 2.5% 2% 4%;
+		width:55%;
+		padding:2% 3.5% 2% 5%;
 		float:left;
 		border-right:1px solid #ccc;
 	form {
@@ -91,7 +92,7 @@ aside {
 
 	width: 28%;
 	float: right;
-	padding: 2% 2% 0;
+	padding: 2% 4% 0;
 
 	.profilePicture {
 		float:right;
@@ -138,6 +139,12 @@ aside {
 footer {
 	clear:both;
 	width:90%;
-	padding:1% 5%;
+	padding:2% 5%;
 	background:#111;
+	@include roundedBottomCorners(3px);
+
+	p {
+		margin:0;
+		color:#fff;
+	}
 }
