--- a/css/_text.scss
+++ b/css/_text.scss
@@ -3,9 +3,16 @@ body {
 	color:$readingColor;
 }
 
-a, a:visited, a:active {
-	// color:#00A56A;
-	color:#DD574C;
+a {
+	color:$linkColor;
+	-webkit-transition: all .1s ease-in-out;
+
+	&:hover {
+		color:lighten($linkColor, 10%);
+	}
+	&:active {
+		color:darken($linkColor, 10%);
+	}
 }
 
 h1, h2, h3, h4, h5 {
@@ -17,10 +24,32 @@ h1, h2, h3, h4, h5 {
 h1 {
 	font-weight:300;
 }
-
+h2 > a, h3 > a {
+	text-decoration:none;
+	color:$titleColor;
+}
 p {
     line-height:1.5;
     margin-bottom:1.6em;
+}
+
+.btn {
+	padding:1em 2em;
+	@include fontSize(1.2);
+	color:#fff !important;
+	background:$linkColor;
+	text-decoration:none;
+	@include roundedCorners(4px);
+	display:inline-block;
+	margin-bottom:1.6em;
+
+	&:hover {
+		background:lighten($linkColor, 10%);
+		cursor:pointer;
+	}
+	&:active {
+		background:darken($linkColor, 10%);
+	}
 }
 
 // styles specific to the article area
