--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -10,10 +10,17 @@
 			@include fontSize(1.7);
 		}
 	}
+	article ol, article ul {
+		@include fontSize(1.4);
+	}
 	header {
 
 		h1 {
 			margin-left:5%;
+		}
+		.navItems {
+			width:45%;
+			margin-right:5%;
 		}
 	}
 
@@ -29,6 +36,8 @@
 			border-right:none;
 
 			form {
+				width:90%;
+				margin:2em 5% 3em;
 				input[type="text"] {
 					width:96%;
 					padding:2%;
@@ -47,7 +56,6 @@
 		}
 		.summary {
 			display:block;
-			padding-right:20%;
 		}
 
 		.fullArticle {
@@ -58,6 +66,7 @@
 			float:left;
 			width:90%;
 			padding:2% 5% 0;
+			border-top:1px solid #ccc;
 
 			.asideList {
 				list-style-type:none;
