--- a/css/mehlhope.css
+++ b/css/mehlhope.css
@@ -168,8 +168,13 @@ body {
   font-family: Verdana, Arial, sans-serif;
   color: #575757; }
 
-a, a:visited, a:active {
-  color: #DD574C; }
+a {
+  color: #dd574c;
+  -webkit-transition: all .1s ease-in-out; }
+  a:hover {
+    color: #e57f77; }
+  a:active {
+    color: #cf3427; }
 
 h1, h2, h3, h4, h5 {
   font-family: "Open Sans", sans-serif;
@@ -182,9 +187,30 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-weight: 300; }
 
+h2 > a, h3 > a {
+  text-decoration: none;
+  color: #333333; }
+
 p {
   line-height: 1.5;
   margin-bottom: 1.6em; }
+
+.btn {
+  padding: 1em 2em;
+  font-size: 1.2em;
+  color: #fff !important;
+  background: #dd574c;
+  text-decoration: none;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  display: inline-block;
+  margin-bottom: 1.6em; }
+  .btn:hover {
+    background: #e57f77;
+    cursor: pointer; }
+  .btn:active {
+    background: #cf3427; }
 
 article ol, article ul {
   font-size: 1.6em;
@@ -210,20 +236,11 @@ header {
 
 nav .navItems {
   float: right;
-  margin-top: 0.5em; }
+  margin-top: 1em; }
   nav .navItems li {
-    float: right;
-    margin: 0 1em;
-    text-align: center; }
-    nav .navItems li img {
-      width: 40%;
-      height: auto;
-      filter: url(/images/filters.svg#grayscale);
-      /* Firefox 3.5+ */
-      filter: gray;
-      /* IE6-9 */
-      -webkit-filter: grayscale(1);
-      /* Google Chrome & Safari 6+ */ }
+    float: right; }
+    nav .navItems li .btn {
+      margin-bottom: 0; }
   nav .navItems.active {
     background: #fff; }
 
@@ -241,7 +258,9 @@ nav .navItems {
   float: left;
   border-right: 1px solid #ccc; }
   .main form {
-    margin: 1em 0 3em; }
+    margin: 2em 0 3em; }
+    .main form h3 {
+      margin-bottom: 2em; }
     .main form label {
       font-size: 1.4em;
       display: block;
@@ -250,29 +269,29 @@ nav .navItems {
       font-weight: 700; }
     .main form input[type="submit"] {
       font-size: 1.4em;
-      background: lightgray;
       border: 0;
-      padding: 1em;
-      margin: 0.5em 0;
-      text-shadow: 0 1px 1px #fff;
-      -webkit-border-radius: 3px;
-      -moz-border-radius: 3px;
-      border-radius: 3px; }
-    .main form input[type="text"] {
+      margin-top: 1.6em; }
+    .main form input[type="text"], .main form input[type="email"] {
       font-size: 1.5em;
       color: #575757;
       display: block;
       width: 50%;
       margin: 1em 0;
       padding: 0.75em;
-      border: 1px solid #575757; }
+      border: 1px solid #575757;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px; }
     .main form textarea {
       font-size: 1.5em;
       color: #575757;
       display: block;
       width: 98%;
       padding: 1%;
-      border: 1px solid #575757; }
+      border: 1px solid #575757;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px; }
   .main article {
     border-bottom: 1px solid #ccc;
     width: 100%;
@@ -350,8 +369,14 @@ footer {
     p.lede {
       font-size: 1.7em; }
 
+  article ol, article ul {
+    font-size: 1.4em; }
+
   header h1 {
     margin-left: 5%; }
+  header .navItems {
+    width: 45%;
+    margin-right: 5%; }
 
   #content-wrapper {
     width: 96%;
@@ -364,11 +389,14 @@ footer {
       width: 100%;
       padding: 0;
       border-right: none; }
-      #content-wrapper .main form input[type="text"] {
-        width: 96%;
-        padding: 2%; }
-      #content-wrapper .main form input[type="submit"] {
-        width: 100%; }
+      #content-wrapper .main form {
+        width: 90%;
+        margin: 2em 5% 3em; }
+        #content-wrapper .main form input[type="text"] {
+          width: 96%;
+          padding: 2%; }
+        #content-wrapper .main form input[type="submit"] {
+          width: 100%; }
     #content-wrapper article {
       border-bottom: 1px solid #ccc;
       width: 90%;
@@ -376,15 +404,15 @@ footer {
       margin-bottom: 1%;
       -webkit-tap-highlight-color: lightBlue; }
     #content-wrapper .summary {
-      display: block;
-      padding-right: 20%; }
+      display: block; }
     #content-wrapper .fullArticle {
       display: none; }
     #content-wrapper aside {
       clear: both;
       float: left;
       width: 90%;
-      padding: 2% 5% 0; }
+      padding: 2% 5% 0;
+      border-top: 1px solid #ccc; }
       #content-wrapper aside .asideList {
         list-style-type: none;
         margin-left: -6%;
