--- a/css/mehlhope.scss
+++ b/css/mehlhope.scss
@@ -1,3 +1,12 @@
+/*
+Theme Name: Mehlhope 2.0
+Theme URI: http://mehlhope.net
+Description: 2013 Mehlhope.net Theme
+Author: Matt Mehlhope
+Author URI: http://mehlhope.net
+Version: 2.0
+*/
+
 @import "varsNmixins";
 @import "reset";
 @import "fonts";
@@ -6,3 +15,4 @@
 @import "mobile";
 @import "tablet";
 @import "desktop";
+@import "bits";
