--- a/css/_baseLayout.scss
+++ b/css/_baseLayout.scss
@@ -100,6 +100,14 @@ nav {
 			display:none;
 		}
 	}
+	.post-navigation {
+		margin:2em 0;
+
+		.btn {
+			background:#ccc;
+			width:30%;
+		}
+	}
 }
 aside {
 
