--- a/css/_baseLayout.scss
+++ b/css/_baseLayout.scss
@@ -12,13 +12,10 @@ header {
 		color:#fff;
 		float:left;
 	}
-	.menuToggle {
-		float:right;
-		display:none;
-	}
 }
 
 nav {
+	float:right;
 	.navItems {
 		float:right;
 		margin-top:1em;
@@ -28,6 +25,9 @@ nav {
 
 			.btn {
 				margin-bottom:0;
+			}
+			.icon {
+				display:none;
 			}
 		}
 
