--- a/css/_text.scss
+++ b/css/_text.scss
@@ -72,5 +72,11 @@ article {
 		padding-left:2em;
 		font-style:italic;
 	}
+	.prettyprint {
+		@include fontSize(1.3);
+		line-height:1.5;
+		margin-bottom:1.6em;
+		border-left:3px solid #ccc;
+	}
 }
 
