--- a/css/_text.scss
+++ b/css/_text.scss
@@ -72,7 +72,7 @@ article {
 		padding-left:2em;
 		font-style:italic;
 	}
-	.prettyprint {
+	pre.prettyprint {
 		@include fontSize(1.3);
 		line-height:1.5;
 		margin-bottom:1.6em;
